<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.actividad2.MainActivity2">

    <Button
        android:id="@+id/button2"
        android:layout_width="257dp"
        android:layout_height="74dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="116dp"
        android:onClick="ir3"
        android:text="@string/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="256dp"
        android:layout_height="58dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="24dp"
        android:onClick="ir4"
        android:text="@string/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:text="@string/button3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="257dp"
        android:layout_height="62dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="24dp"
        android:onClick="ir6"
        android:text="@string/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:text="@string/button4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:onClick="volver"
        android:text="@string/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:text="@string/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>